# configlib

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  configlib_quick_fire_retest.sh  configlib_release_gauntlet.sh  test_report.md  test_report_strict.md  test_results.txt
build-release/: configlib.pc  configlibConfig.cmake  configlib_basic_c  configlib_basic_cpp  configlib_bindings_cpp  configlib_files_cpp  configlib_loaders_cpp  configlib_schema_cpp  configlib_store_cpp  configlib_tests_api_consistency  configlib_tests_bindings  configlib_tests_c  configlib_tests_cpp  configlib_tests_files  configlib_tests_fire  configlib_tests_loaders  configlib_tests_schema  configlib_tests_store  configlib_tests_views  configlib_views_cpp  install_manifest.txt
cmake/: configlibConfig.cmake.in
docs/: API.md  API_FREEZE_CANDIDATE.md  API_REVIEW.md  API_STABILITY.md  ARCHITECTURE.md  AUTHOR_NOTE.md  Authors_Note.md  BINDINGS.md  BUILDING.md  CHANGELOG.md  CODE_DOCUMENTATION.md  C_ABI.md  DESIGN_NOTES.md  DOCUMENTATION_GENERATION.md  EXPLAINED_SIMPLY.md  FILE_DISCOVERY.md  FIRE_TESTING.md  HOWTO.md  LICENSE.md  LIFETIMES.md  LOADERS.md  MACHINE_CONFIGURATION_ROADMAP.md  PACKAGING.md  PLUGIN_MODEL.md  PUBLIC_API_MAP.md  Programmers_Manual.md  RELEASE_CANDIDATE.md  ROADMAP.md  SCHEMA.md  STORE.md  TERMINOLOGY.md  VERION_V1_RELEASENOTES.md  VIEWS.md  WHEN_TO_USE.md
examples/: basic.cpp  bindings.cpp  c_basic.c  example.conf  files.cpp  loaders.cpp  schema.cpp  store.cpp  views.cpp
include/configlib/: binding.hpp  configlib.h  configlib.hpp  diagnostic.hpp  fact.hpp  key.hpp  loaders.hpp  policy.hpp  result.hpp  schema.hpp  source.hpp  store.hpp  value.hpp  version.hpp  view.hpp
install/include/configlib/: binding.hpp  configlib.h  configlib.hpp  fact.hpp  key.hpp  schema.hpp  value.hpp  version.hpp  view.hpp
install/lib/cmake/configlib/: configlibConfig.cmake  configlibTargets-noconfig.cmake  configlibTargets.cmake
install/lib/pkgconfig/: configlib.pc
pkgconfig/: configlib.pc.in
src/: c_api.cpp  diagnostic.cpp  fact.cpp  key.cpp  loaders.cpp  policy.cpp  resolver.cpp  result.cpp  schema.cpp  source.cpp  store.cpp  value.cpp  view.cpp
tests/: test_api_consistency.cpp  test_bindings.cpp  test_c_api.c  test_configlib.cpp  test_files.cpp  test_fire.cpp  test_loaders.cpp  test_schema.cpp  test_store.cpp  test_views.cpp
